# cmake-vcpkg-winrt-boilerplate

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.to_copy  DEVELOPMENT.md  README.md  conanfile.py  helloworld.cpp  vcpkg-configuration.json  vcpkg.json
.github/workflows/: all-os-build.yml  windows-build.yml
cmake/: setup-windows.cmake
docs/: CMakeLists.txt
include/: ble.h  calculator.h  com_ports.h  helloworld.h  mqtt.h  ports.h  qt.h
setup/: windows_setup.bat
src/: CMakeLists.txt  ble.cpp  calculator.cpp  com_ports.cpp  helloworld.cpp  main.cpp  mqtt.cpp  ports.cpp  qt.cpp  run_calc.cpp
test/: CMakeLists.txt  test_calc.cpp  test_run_calc.cpp
test/python/: conftest.py  test_system_calc.py
